--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,948 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Ubuntu:wght@300&display=swap");
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --blue: #1da1f2;
+  --black: #14171a;
+  --dark-gray: #657786;
+  --light-gray: #aab8c2;
+  --extraLightGray: #e1e8ed;
+  --extrExtraLightGray: #f5f8fa;
 }
 
+/* Navbar Styles ////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+header {
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 70px;
+  padding: 0 2rem;
+  background-color: var(--extraLightGray);
+  color: var(--extrExtraLightGray);
+  z-index: 999;
+}
+
+nav a {
+  margin: 0 2rem;
+  color: var(--extrExtraLightGray);
+  text-decoration: none;
+}
+
+header .nav-btn {
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--dark-gray);
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.8rem;
+}
+
+main {
+  margin-top: 70px;
+}
+
+/* Explore Page Styles ///////////////////////////////////////////////////////////////////////////////////*/
+
+.explore-page-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.explore-page-container .box-1 {
+  width: 50%;
+}
+
+.explore-page-container .box-2 {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.explore-page-container h4 {
+  margin: 2rem;
+}
+
+.explore-page-container .box-2 .category-titles {
+  display: flex;
+  flex-direction: row;
+}
+
+.btn.explore-page {
+  margin: 0.8rem;
+  padding: 0.8rem;
+  border: none;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+}
+
+.btn.explore-page:hover {
+  background: var(--black);
+  color: var(--extrExtraLightGray);
+}
+
+/* Category Page Container ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.category-page-container {
+  width: 100%;
+}
+
+.category-page-container .cards-section {
+  width: 100%;
+}
+
+.category-page-container .cards-section .cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.load-more {
+  text-decoration: underline;
+  cursor: pointer;
+  margin: 2rem;
+  text-align: right;
+}
+
+.load-more:hover {
+  color: var(--light-gray);
+  font-weight: bold;
+}
+
+/* Offers Page Container ///////////////////////////////////////////////////////////////////////////////////*/
+
+.offers-page-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.offers-page-container h4 {
+  text-align: center;
+  margin: 2rem;
+}
+
+/* Slider Styles ////////////////////////////////////////////////////////////////////////////////////////// */
+
+.slider-container {
+  position: relative;
+  width: 100%;
+}
+
+.slider-container img {
+  width: 100%;
+  height: 90vh;
+}
+
+.slider-container p {
+  padding: 0.8rem;
+  background: #fff;
+  border-top-right-radius: 2rem;
+  font-size: 1rem;
+}
+
+.slider-container p:hover {
+  font-size: 1.2rem;
+}
+
+.slider-container .title {
+  position: absolute;
+  top: 80%;
+  left: 0;
+}
+
+.slider-container .price {
+  position: absolute;
+  top: 90%;
+  left: 0;
+}
+
+/* Sign-in Page Styles /////////////////////////////////////////////////////////////////////////////////////*/
+
+.wave {
+  position: fixed;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+  filter: grayscale(100%);
+  z-index: -1;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 7rem;
+  padding: 0 2rem;
+}
+
+.container .img {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.container .img img {
+  width: 500px;
+}
+
+.login-container {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.login-container form {
+  width: 360px;
+}
+
+.avatar {
+  width: 100px;
+}
+
+form h4 {
+  font-size: 1rem;
+  margin: 15px 0;
+  color: var(--black);
+}
+
+.input-div {
+  display: grid;
+  grid-template-columns: 7% 93%;
+  margin: 25px 0;
+  padding: 5px 0;
+  border-bottom: 2px solid var(--light-gray);
+}
+
+.input-div.one {
+  margin-top: 0;
+}
+
+.input-div.two {
+  margin-top: 0;
+}
+
+.input-div.three {
+  margin-bottom: 4px;
+}
+
+.i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.i i {
+  color: var(--dark-gray);
+}
+
+.input-div > div {
+  position: relative;
+  height: 45px;
+}
+
+.input-div > div h5 {
+  position: absolute;
+  left: 55px;
+  top: 28%;
+  transform: translate(-50%);
+  color: var(--light-gray);
+  font-size: 18px;
+  /* display: none; */
+  transition: 0.3s;
+}
+
+.input-div > div .email-placeholder {
+  position: absolute;
+  left: 38px;
+}
+
+.input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border: none;
+  outline: none;
+  background: none;
+  padding: 0.5rem;
+  font-size: 1rem;
+  color: var(--black);
+}
+
+form .flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.forgot-password {
+  display: block;
+  text-align: right;
+  text-decoration: none;
+  color: var(--dark-gray);
+  font-size: 0.9rem;
+  transition: 0.3s;
+}
+
+.forgot-password:hover {
+  color: var(--blue);
+}
+
+.sign-btn {
+  display: block;
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  margin: 1rem 0;
+  font-size: 1.2rem;
+  outline: none;
+  border: none;
+  background-image: linear-gradient(
+    to right,
+    var(--dark-gray),
+    var(--light-gray),
+    var(--dark-gray)
+  );
+  cursor: pointer;
+  color: var(--extrExtraLightGray);
+  text-transform: uppercase;
+  background-size: 200%;
+  transition: 0.5s;
+}
+
+.sign-btn:hover {
+  background-position: right;
+}
+
+.sign-footer-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.oauth-container p {
+  margin-bottom: 30px;
+}
+
+.bi.bi-google {
+  color: var(--dark-gray);
+  cursor: pointer;
+  font-size: 35px;
+}
+
+.bi.bi-google:hover {
+  color: var(--light-gray);
+}
+
+/* Profile Page Styles ///////////////////////////////////////////////////////////////////////////////////////// */
+
+.profile-page {
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: nowrap;
+}
+
+.side {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.side .dropdown {
+  width: 15rem;
+  height: 3.5rem;
+  background-color: #fff;
+  color: var(--black);
+  border-radius: 0.8rem;
+  margin-top: 10px;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+  padding: 1em;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  transition: background 0.3s;
+}
+
+.side .dropdown:hover {
+  background-color: var(--extraLightGray);
+}
+
+.side .dropdown .select {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.side .menu {
+  list-style: none;
+  padding: 0.2em 0.5em;
+  background-color: #fff;
+  box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+  border-radius: 0.5em;
+  color: var(--black);
+  width: 15rem;
+  opacity: 0;
+  display: none;
+  transition: 0.2s;
+  z-index: 1;
+}
+
+.menu form {
+  background-color: var(--extrExtraLightGray);
+  border-radius: 0.8rem;
+}
+
+.menu form input {
+  width: 16vw;
+  height: 1.5rem;
+  margin: 0.5rem 0.5rem;
+  border-radius: 1rem;
+  border: none;
+}
+
+.menu li {
+  padding: 0.7em 0.5em;
+  margin: 0.3em 0;
+  border-radius: 0.5em;
+  cursor: pointer;
+}
+
+.menu li:hover {
+  background-color: var(--extrExtraLightGray);
+}
+
+.dropdown img {
+  width: 35px;
+}
+
+.cards-section {
+  width: 70%;
+}
+
+.cards-section h5 {
+  text-align: center;
+  margin: 3rem;
+}
+
+.cards-section .cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.cards .card {
+  width: 20rem;
+  margin: 0.3rem;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(
+    to left top,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0.5)
+  );
+  border-radius: 1rem;
+  padding: 2rem;
+  box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
+  justify-content: space-between;
+}
+
+.card-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card-info img {
+  width: 75px;
+  height: 75px;
+  border-radius: 0.8rem;
+  margin-right: 3rem;
+}
+
+.card-info h6 {
+  margin-bottom: 0.4rem;
+}
+
+.card-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card-links div {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.card-links div button {
+  display: block;
+  width: 50%;
+  height: 30px;
+  border-radius: 25px;
+  font-size: 1.2rem;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  background-color: var(--extrExtraLightGray);
+  color: var(--black);
+  background-size: 200%;
+  transition: 0.3s;
+}
+
+.card-links button:hover {
+  background-color: var(--extraLightGray);
+}
+
+/* Create Product Styles ////////////////////////////////////////////////////////////////////////////////// */
+.create-product-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+
+.left-screen {
+  display: flex;
+  justify-content: center;
+  width: 40%;
+  height: 100vh;
+}
+
+.left-screen img {
+  width: 350px;
+  height: 100vh;
+}
+
+.right-screen {
+  width: 60%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.right-screen h5 {
+  margin: 0.8rem;
+}
+
+.right-screen .btns-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.right-screen .btns-container button {
+  margin: 0.3rem;
+}
+
+.btns-container .btn {
+  display: block;
+  width: 100%;
+  height: 85%;
+  border-radius: 0.8rem;
+  margin: 1rem 0;
+  font-size: 1.1rem;
+  outline: none;
+  border: none;
+  background-color: var(--extraLightGray);
+  cursor: pointer;
+  color: var(--black);
+  background-size: 200%;
+}
+
+.form-container .box-1 {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+
+.form-container .box-1 input {
+  margin: 0.3rem 0;
+  border: none;
+  outline: none;
+}
+
+.form-container .box-2 {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem 0;
+}
+
+.form-container .box-2 button {
+  border: none;
+}
+
+.form-container .box-3 {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem 0;
+}
+
+.form-container .box-3 input {
+  width: 50%;
+  margin: 0.3rem 0;
+  border: none;
+  outline: none;
+}
+
+.form-container .box-4 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: 0.3rem 0;
+}
+
+.form-container .box-4 .file-input-container label,
+.form-container .box-4 .file-input-container p {
+  margin: 1rem 0;
+}
+
+.form-container .box-4 .file-input-container input {
+  border: none;
+}
+
+.create-button {
+  display: block;
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  margin: 1rem 0;
+  font-size: 1rem;
+  outline: none;
+  border: none;
+  background-color: var(--extraLightGray);
+  cursor: pointer;
+  color: var(--black);
+  background-size: 200%;
+}
+
+.create-button:hover {
+  background-color: var(--light-gray);
+  color: #fff;
+}
+
+/* Spinner Component Style /////////////////////////////////////////////////////////////////////////////////*/
+
+.spinner-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner {
+  width: 100px;
+  height: 100px;
+  position: relative;
+}
+
+.spinner div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 4px solid transparent;
+  border-top-color: var(--black);
+  border-radius: 50%;
+  animation: spinnerOne 1.2s linear infinite;
+}
+
+.spinner div:nth-child(2) {
+  border: 4px solid transparent;
+  border-bottom-color: var(--black);
+  animation: spinnerTwo 1.2s linear infinite;
+}
+
+@keyframes spinnerOne {
+  0% {
+    transform: rotate(0deg);
+    border-width: 10px;
+  }
+  50% {
+    transform: rotate(180deg);
+    border-width: 1px;
+  }
+  100% {
+    transform: rotate(360deg);
+    border-width: 10px;
+  }
+}
+
+@keyframes spinnerTwo {
+  0% {
+    transform: rotate(0deg);
+    border-width: 1px;
+  }
+  50% {
+    transform: rotate(180deg);
+    border-width: 10px;
+  }
+  100% {
+    transform: rotate(360deg);
+    border-width: 1px;
+  }
+}
+
+/* Product Page Container///////////////////////////////////////////////////////////////////////////////////*/
+
+.product-page-container {
+  width: 450px;
+  margin: 9rem 6rem;
+  position: relative;
+}
+
+.product-page-container .link-copied {
+  text-align: right;
+}
+
+.product-page-container img {
+  width: 400px;
+  height: 250px;
+  border-radius: 2rem;
+  display: block;
+}
+
+.product-page-container .bi.bi-share {
+  font-size: 1.5rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  color: var(--extrExtraLightGray);
+  cursor: pointer;
+  z-index: 3;
+}
+
+.product-page-container .product-info p {
+  margin: 0.8rem 0;
+}
+
+/* Contact Page Styles /////////////////////////////////////////////////////////////////////////////////////*/
+
+.contact-page-container {
+  height: 85vh;
+  display: flex;
+  flex-direction: row;
+  place-items: center;
+  margin: 1rem;
+}
+
+.contact-page-container .img-container {
+  width: 50%;
+  margin-left: 4rem;
+}
+
+.contact-page-container .img-container img {
+  width: 550px;
+}
+
+.contact-page-container .contact-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-page-container .contact-container input {
+  padding: 0.4rem;
+  border: 1px solid var(--light-gray);
+  border-radius: 0.6rem;
+}
+
+.contact-page-container .contact-container h4 {
+  text-align: center;
+  margin: 2rem;
+}
+
+.contact-page-container .contact-container label {
+  margin: 0.4rem 0;
+}
+
+.contact-page-container .contact-container form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+
+.contact-page-container .contact-container form textarea {
+  width: 100%;
+  height: 22vh;
+  border: 1px solid var(--light-gray);
+  border-radius: 0.8rem;
+  padding: 1rem;
+}
+
+.contact-page-btn {
+  border: none;
+  border-radius: 0.4rem;
+  padding: 0.6rem;
+  cursor: pointer;
+}
+
+.contact-page-btn:hover {
+  background-color: var(--black);
+  color: var(--extrExtraLightGray);
+}
+
+/* Media Styles ////////////////////////////////////////////////////////////////////////////////////////////*/
+
+@media only screen and (max-width: 1024px) {
+  header .nav-btn {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  header nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    background-color: var(--light-gray);
+    transition: 1s;
+    transform: translateY(-100vh);
+    z-index: 999;
+  }
+
+  header .responsive-nav {
+    transform: none;
+  }
+
+  nav .nav-close-btn {
+    position: absolute;
+    top: 4.5rem;
+    right: 2rem;
+  }
+
+  nav a {
+    font-size: 1.5 rem;
+  }
+}
+
+@media (max-width: 630px) {
+  .container {
+    height: 100vw;
+    width: 100vw;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .container {
+    grid-gap: 5rem;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  form {
+    width: 200px;
+  }
+
+  .img img {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .img img {
+    display: none;
+  }
+
+  .container {
+    grid-template-columns: 1fr;
+  }
+
+  .wave {
+    display: none;
+  }
+
+  .login-container {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1031px) {
+  .profile-page {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .explore-page-container {
+    flex-direction: column;
+    place-items: center;
+  }
+
+  .explore-page-container .box-1 {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .explore-page-container .box-2 .category-titles {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 624px) {
+  .product-page-container {
+    width: 100%;
+    margin: 0;
+  }
+
+  .product-page-container img {
+    width: 100%;
+    height: 60vh;
+    border-radius: 0;
+  }
+}
+
+
+@media screen and (max-width: 900px) {
+  .contact-page-container .img-container {
+    display: none;
+  }
+
+  .contact-page-container .contact-container {
+    width: 100%;
+  }
+
+  .contact-page-btn {
+    width: 100%;
+  }
+}
